# livedoor-scraper

./: Makefile  pyproject.toml  scraper.py
data/: README.md
